--- a/setup.cfg
+++ b/setup.cfg
@@ -9,4 +9,6 @@ license_file = LICENSE
 packages = 
     funcs
 python_requires = >=3.10
-package_dir = utils
+package_dir = 
+    =utils
+zip_safe = no
