--- a/setup.cfg
+++ b/setup.cfg
@@ -7,9 +7,8 @@ license_file = LICENSE
 
 [options]
 packages =
-    funcs
-    patterns
+    utils
 python_requires = >=3.10
 package_dir =
-    =utils
+    =src
 zip_safe = no
