--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,9 @@ license_file = LICENSE
 [options]
 packages =
     utils
+    utils.files
+    utils.funcs
+    utils.patterns
 python_requires = >=3.10
 package_dir =
     =src
