--- a/setup.cfg
+++ b/setup.cfg
@@ -7,10 +7,10 @@ license_file = LICENSE
 
 [options]
 packages =
-    utils
-    utils.files
-    utils.funcs
-    utils.patterns
+    pkutils
+    pkutils.files
+    pkutils.funcs
+    pkutils.patterns
 python_requires = >=3.10
 package_dir =
     =src
