added global package

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ license_file = LICENSE
 [options]
 packages =
     pkutils
+    pkutils.globals
     pkutils.files
     pkutils.funcs
     pkutils.patterns
