--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,8 @@ packages =
     pkutils.files
     pkutils.funcs
     pkutils.patterns
+    pkutils.patterns.event
+    pkutils.patterns.factory
 python_requires = >=3.10
 package_dir =
     =src
