--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pkutils
+name = polutil
 description = python utilities
 author = Gavriil Polshkrev
 license = MIT
@@ -7,12 +7,12 @@ license_file = LICENSE
 
 [options]
 packages =
-    pkutils
-    pkutils.files
-    pkutils.funcs
-    pkutils.patterns
-    pkutils.patterns.event
-    pkutils.patterns.factory
+    polutils
+    polutils.files
+    polutils.funcs
+    polutils.patterns
+    polutils.patterns.event
+    polutils.patterns.factory
 python_requires = >=3.10
 package_dir =
     =src
