dev naming update

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pkutils
+name = polutils
 description = python utilities
 author = Gavriil Polshkrev
 license = MIT
@@ -7,11 +7,10 @@ license_file = LICENSE
 
 [options]
 packages =
-    pkutils
-    pkutils.globals
-    pkutils.files
-    pkutils.funcs
-    pkutils.patterns
+    polutils
+    polutils.files
+    polutils.funcs
+    polutils.patterns
 python_requires = >=3.10
 package_dir =
     =src
