--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,8 @@ packages =
     polutils.files
     polutils.funcs
     polutils.patterns
+    polutils.patterns.factory
+    polutils.patterns.event
 python_requires = >=3.10
 package_dir =
     =src
